Adjusted slider for new datapoints Minor change to titles for skewedFoldable components Adjusted start and end date on daypicker Fixed links for genre on fullpost Added tv/radio current filter options for visiblity Fixed a few bugs with reload and back/forth browser compatability

--- a/src/assets/styles/vue-slider-styles.css
+++ b/src/assets/styles/vue-slider-styles.css
@@ -124,17 +124,17 @@
 	}
 }
 
-.vue-slider-marks .vue-slider-mark:nth-child(5n) .vue-slider-mark-label {
+.vue-slider-marks .vue-slider-mark:nth-child(1n) .vue-slider-mark-label {
 	display: block;
 	color: #002e70;
 }
 
-.vue-slider-marks .vue-slider-mark:nth-child(5n) {
+.vue-slider-marks .vue-slider-mark:nth-child(1n) {
 	height: 50% !important;
 	top: 75% !important;
 }
 
-.vue-slider-marks .vue-slider-mark:nth-child(5n) .vue-slider-mark-step:after {
+.vue-slider-marks .vue-slider-mark:nth-child(1n) .vue-slider-mark-step:after {
 	content: '';
 	display: block;
 	width: 20px;
